# NextStep

./: .gitignore  README.md  package-lock.json
backend/: .env.example  CMakeLists.txt  main.cpp
backend/auth/: Token.cpp  Token.h
backend/controllers/: ChatController.cpp  ChatController.h  ChatMemberController.cpp  ChatMemberController.h  MessageController.cpp  MessageController.h  ReviewController.cpp  ReviewController.h  StartupController.cpp  StartupController.h  UserController.cpp  UserController.h
backend/db/: Database.cpp  Database.h
backend/errors/: DbConnectionError.h
backend/middleware/: AuthMiddleware.h
backend/models/: Chat.cpp  Chat.h  ChatMember.cpp  ChatMember.h  Message.cpp  Message.h  Review.cpp  Review.h  Startup.cpp  Startup.h  User.cpp  User.h
backend/routes/: ChatMemberRoute.h  ChatRoute.h  MessageRoute.h  ReviewRoute.h  Routes.h  StartupRoute.h  UserRoute.h
backend/serializers/: ChatMemberSerializer.cpp  ChatMemberSerializer.h  ChatSerializer.cpp  ChatSerializer.h  MessageSerializer.cpp  MessageSerializer.h  ReviewSerializer.cpp  ReviewSerializer.h  StartupSerializer.cpp  StartupSerializer.h  UserSerializer.cpp  UserSerializer.h
backend/utils/: FormData.cpp  FormData.h  Hash.cpp  Hash.h  Token.h
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  mockDataBase.js
frontend/src/assets/styles/: App.css  chatsCSS.css  createProfileCSS.css  createProjCSS.css  error.css  index.css  logCSS.css  profilePageCSS.css  projPageCSS.css  searchempCSS.css  searchprojCSS.css
frontend/src/components/: EmployeeFilters.jsx  EmployeeSort.jsx  Footer.jsx  Header.jsx  PhoneMask.jsx  ProjectFilters.jsx  ProjectSort.jsx
frontend/src/pages/: Chat.jsx  CreateProfile.jsx  CreateProject.jsx  EditProfile.jsx  EditProject.jsx  ErrorPage.jsx  ErrorPage.tsx  LoginPage.jsx  MainPage.jsx  ProfilePage.jsx  ProjectPage.jsx  SearchEmp.jsx  SearchProject.jsx  SearchRes.jsx
frontend/src/utils/: cropImage.js
